# nfl-event-parser

./: .gitignore  Pipfile  README.md  config.json  conftest.py  requirements.txt  setup.cfg
nfl/: core.py  logger.py
nfl/helpers/: command_line.py  dictionaries.py
nfl/logs/: 2021-04-07.txt
output_data/: 2021-04-07 13:05:23.743049.json  2022-03-18 17:51:33.651446.json
scripts/: main.py
src/nfl/: logger.py  settings.py
src/nfl/helpers/: dates.py  dictionaries.py
src/nfl/logs/: 2022-03-18.txt
tests/: MockResponse.py  mock_config.py  static_response.json  test_api_request.py
