[metadata]
name = nfl
description = A simple backend service to pull, transform, and dump data from a remote API about NFL games.
author = Nick Hopewell
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.8
[options]
packages =
    nfl
install_requires =
    requests>2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.8

[flake8]
max-line-length = 160